--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Dashboard</title>
-  </head>
-  <body>
 
-		<!-- Base de datos -->
-		<script src="./js/data.js"></script>
-		<!-- Aquí va tus archivos JS -->
-    <script src="./js/app.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Data Dashboard</title>
+  <header id="logo">
+    <div class="header">
+    <link rel="stylesheet" href="css/main.css">
+    
+    <img src="assets/images/logo-laboratoria.svg" alt="" width="250px" height="250px">
+    <h2>Data Dashboard</h2>
+  </div>
+  </header>
+</head>
+
+<body>
+  <nav>
+      <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">Escolher Sede</button>
+          <div id="myDropdown" class="dropdown-content">
+            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+            <a href="#about">Arequipa - Turma 2016-2 </a>
+            <a href="#base">Arequipa - Turma 2017-1</a>
+            <a href="#support">Cidade do México - Turma 2017-1</a>
+            <a href="#tools">Cidade do México - Turma 2017-2 </a>
+            <a href="#blog">Lima - Turma 2016-2</a>
+            <a href="#contact">Lima - Turma 2017-1</a>
+            <a href="#custom">Lima - Turma 2017-2</a>
+            <a href="#tools">Santiago do Chile - Turma 2016-2</a>
+            <a href="#tools"> Santiago do Chile- Turma 2017-1</a>
+            <a href="#tools"> Santiago do Chile- Turma 2017-2</a>
+          </div>
+        </div>
+  </nav>
+
+  <script src="./js/data.js"></script>
+
+  <script src="./js/app.js"></script>
+</body>
+
 </html>
