Alterações e inclusão de gráficos

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <a href="geral.html">Geral</a>
 
       <a href="alunas.html">Alunas</a>
-     
+      <a href="jedis.html">Professores e Jedis</a>
       
     </div>
   
