Alterações no html, gráficos e css

--- a/Gráficos/grafico Jedis Arequipa.html
+++ b/Gráficos/grafico Jedis Arequipa.html
@@ -19,13 +19,13 @@
           legend: { position: 'bottom' }
         };
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chartAqp'));
 
         chart.draw(data, options);
       }
     </script>
   </head>
   <body>
-    <div id="curve_chart" style="width: 900px; height: 500px"></div>
+    <div id="curve_chartAqp" style="width: 900px; height: 500px"></div>
   </body>
 </html>
