--- a/alunas.html
+++ b/alunas.html
@@ -26,6 +26,13 @@
       <a href="jedis.html">Professores e Jedis</a>
       
     </div>
+    <div class="card">
+      <img src="assets/images/foto.jpeg" alt="Vanessa" style="width:80%">
+      <h1> Vanessa Pinheiro</h1>
+      <p class="title">Training Manager </p>
+      <p>Laboratória - Sede São Paulo </p>
+      <p><button>Editar Informações</button></p>
+    </div>
   <nav>
       <!--<div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">Escolher Sede</button>
