--- a/jedis.html
+++ b/jedis.html
@@ -26,6 +26,13 @@
         <a href="jedis.html">Professores e Jedis</a>
         
       </div>
+      <div class="card">
+        <img src="assets/images/foto.jpeg" alt="Vanessa" style="width:80%">
+        <h1> Vanessa Pinheiro</h1>
+        <p class="title">Training Manager </p>
+        <p>Laboratória - Sede São Paulo </p>
+        <p><button>Editar Informações</button></p>
+      </div>
       <h2>Média das notas dos Professores e Jedis - Arequipa</h2>
       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
