--- a/Gráficos/grafico Cidade Do Mexico.html
+++ b/Gráficos/grafico Cidade Do Mexico.html
@@ -17,14 +17,14 @@
           vAxis: {title: 'Período',  titleTextStyle: {color: 'red'}}//legenda vertical
         };
        
-        var barras = new google.visualization.BarChart(document.getElementById('barrasCdm'));
+        var barras = new google.visualization.BarChart(document.getElementById('barrasCdmEvasao'));
         barras.draw(data, options);
         
       }
     </script>
   </head>
   <body>
-    <div id="barrasCdm" style="width: 900px; height: 500px;"></div>
-    <div id="linhasCdm" style="width: 900px; height: 500px;"></div>
+    <div id="barrasCdmEvasao" style="width: 900px; height: 500px;"></div>
+    <div id="linhasCdmEvasao" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
