--- a/Gráficos/grafico Jedis Lima.html
+++ b/Gráficos/grafico Jedis Lima.html
@@ -20,13 +20,13 @@
           legend: { position: 'bottom' }
         };
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chartLm'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chartLmJedi'));
 
         chart.draw(data, options);
       }
     </script>
   </head>
   <body>
-    <div id="curve_chartLm" style="width: 900px; height: 500px"></div>
+    <div id="curve_chartLmJedi" style="width: 900px; height: 500px"></div>
   </body>
 </html>
