--- a/Gráficos/grafico Jedis Santiago.html
+++ b/Gráficos/grafico Jedis Santiago.html
@@ -20,13 +20,13 @@
           legend: { position: 'bottom' }
         };
 
-        var chart = new google.visualization.LineChart(document.getElementById('curve_chartSdc'));
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chartSdcJedi'));
 
         chart.draw(data, options);
       }
     </script>
   </head>
   <body>
-    <div id="curve_chartSdc" style="width: 900px; height: 500px"></div>
+    <div id="curve_chartSdcJedi" style="width: 900px; height: 500px"></div>
   </body>
 </html>
