--- a/Gráficos/grafico Santiago.html
+++ b/Gráficos/grafico Santiago.html
@@ -18,14 +18,14 @@
           vAxis: {title: 'Período',  titleTextStyle: {color: 'red'}}//legenda vertical
         };
        
-        var barras = new google.visualization.BarChart(document.getElementById('barrasSdc'));
+        var barras = new google.visualization.BarChart(document.getElementById('barrasSdcEvasao'));
         barras.draw(data, options);
         
       }
     </script>
   </head>
   <body>
-    <div id="barrasSdc" style="width: 900px; height: 500px;"></div>
-    <div id="linhasSdc" style="width: 900px; height: 500px;"></div>
+    <div id="barrasSdcEvasao" style="width: 900px; height: 500px;"></div>
+    <div id="linhasSdcEvasao" style="width: 900px; height: 500px;"></div>
   </body>
 </html>
