Alteração do nome para index.html

--- a/alunas.html
+++ b/alunas.html
@@ -19,7 +19,7 @@
     </div>
   </header>
   <div class="scrollmenu">
-      <a href="geral.html">Geral</a>
+      <a href="index.html">Geral</a>
 
       <a href="alunas.html">Alunas</a>
       <a href="jedis.html">Professores e Jedis</a>
