--- a/jedis.html
+++ b/jedis.html
@@ -20,7 +20,7 @@
       </div>
     </header>
     <div class="scrollmenu">
-        <a href="geral.html">Geral</a>
+        <a href="index.html">Geral</a>
   
         <a href="alunas.html">Alunas</a>
         <a href="jedis.html">Professores e Jedis</a>
